Fix layout issues for tags

--- a/rocky/assets/css/themes/soft/manon/tags.scss
+++ b/rocky/assets/css/themes/soft/manon/tags.scss
@@ -14,9 +14,6 @@ ul {
     padding: 0;
 
     li {
-      border: none;
-      padding: 0;
-
       label {
         margin-right: 0.5rem;
       }
